--- a/frontend/components/issues/pug/issues.pug
+++ b/frontend/components/issues/pug/issues.pug
@@ -20,16 +20,10 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 		model="vm.model"
 		filter-text="vm.filterText"
 		import-bcf="vm.importBcf(file)"
-		event="vm.event"
 		on-edit-issue="vm.editIssue(issue)"
-		on-select-issue="vm.selectIssue(issue)"
-		keys-down="vm.keysDown"
 		content-height="vm.setContentHeight(height)"
 		menu-option="vm.selectedMenuOption"
-		user-job="vm.modelUserJob"
-		tree-map="vm.treeMap"
-		issue-display="vm.issueDisplay"
-		available-jobs="vm.availableJobs")
+		issue-display="vm.issueDisplay")
 
 	// Issue
 	issue(
