--- a/frontend/components/issues/pug/issues-list.pug
+++ b/frontend/components/issues/pug/issues-list.pug
@@ -7,6 +7,7 @@
 	// List
 	div(ng-switch-when="list")
 		.issueListItem(
+			id="{{'issue' + issue._id}}"
 			ng-repeat="issue in vm.issuesToShow track by $index"
 			layout="column"
 			ng-click="vm.selectIssue(issue)")
