ISSUE #567 - MVP TypeScript intergration :D

--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -6,6 +6,7 @@ div.homeContainer(
 	ng-keyup="vm.keyAction($event)")
 
 	viewer(
+		id="viewer"
 		ng-if="!vm.isMobileDevice && !vm.isLegalPage"
 		hide-xs
 		hide-sm
