--- a/frontend/components/panel/pug/panel-card-option-menu.pug
+++ b/frontend/components/panel/pug/panel-card-option-menu.pug
@@ -4,7 +4,7 @@ md-menu(md-position-mode="target-right target", md-offset="2 14")
 		ng-click="$mdOpenMenu($event)")
 		md-icon.angular-material-icons more_vert
 	md-menu-content(width="4" style="max-height:none")
-		md-menu-item(
+		md-menu-item.menuHighlight(
 			ng-repeat="menuItem in vm.getUniqueMenuItems()"
 			ng-if="!menuItem.hidden")
 			md-button(ng-click="vm.menuItemSelected($index)")
