ISSUE #563 - More work on cleaning up Panel logic

--- a/frontend/components/panel/pug/panel-card.pug
+++ b/frontend/components/panel/pug/panel-card.pug
@@ -9,6 +9,10 @@ div(layout="column", class="md-whiteframe-1dp")
 				h2
 					span {{vm.contentData.title}}
 			#filterContainer(flex)
+				panel-card-filter(
+					ng-if="vm.hasFilter()"
+					show-filter='vm.showFilter' 
+					filter-text='vm.filterText')
 			div(flex, ng-if="!vm.showFilter")
 
 			// Options
