--- a/frontend/components/login/pug/login.pug
+++ b/frontend/components/login/pug/login.pug
@@ -55,4 +55,6 @@
 						a.loginLinks(href="passwordForgot") Forgot password?
 					div(layout="row", layout-align="start center", flex="none")
 						a.loginLinks(href="http://3drepo.org/pricing/") Sign up
-					h2.md-subhead#loginVersion Version: {{vm.version}}
+					h2.md-subhead#loginVersion Version: 
+						a.loginLinks(href="https://github.com/3drepo/3drepo.io/releases/latest") {{vm.version}}
+						md-tooltip(md-direction="bottom") Release Notes
