ISSUE #591 - Fix issue with fed dialog button not being disabled on empty fed

--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -119,6 +119,10 @@
 											save-federation="vm.saveFederation"
 											on-show-page="vm.showPage(page, callingPage)"
 											accounts="vm.accounts"
+											check-federation-save-disabled="vm.checkFederationSaveDisabled"
+											is-duplicate-name="vm.isDuplicateName"
+											federation-save-disabled="vm.federationSaveDisabled"
+											federation-error-message="vm.federationErrorMessage"
 											subscriptions="vm.subscriptions")
 
 									p.no-federations(
