--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -128,9 +128,9 @@ md-dialog#federationDialog(
 					// Save/Cancel
 					#federationSave(layout="row", layout-align="start center")
 						md-button.md-raised.md-accent(
-							ng-disabled="vm.isDuplicateName()", 
+							ng-disabled="vm.federationSaveDisabled", 
 							ng-click="vm.saveFederation(vm.federationData.teamspace, vm.federationData.project)") Save 
 							md-progress-circular.isSavingProgress(ng-if="vm.isSaving")
 						md-button.md-accent(ng-click="vm.closeFederationDialog()") Cancel
 
-					p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
+					p.modelDialogError(ng-if="vm.federationErrorMessage") {{vm.federationErrorMessage}}
