--- a/frontend/components/clip/pug/clip.pug
+++ b/frontend/components/clip/pug/clip.pug
@@ -14,6 +14,7 @@ div(ng-if="vm.bbox && vm.units", layout="column", layout-align="start center", f
 				layout="row")
 				
 				md-radio-button(
+					id="{{axis + 'ClipAxis'}}"
 					ng-repeat="axis in vm.axes"
 					value="{{axis}}"
 					ng-disabled="!vm.visible") {{axis}}
@@ -50,9 +51,11 @@ div(ng-if="vm.bbox && vm.units", layout="column", layout-align="start center", f
 
 					div 
 						button.upDownButtons.angular-material-icons(
+							id="incrementClip"
 							ng-click="vm.incrementDiscrete()"
 						) keyboard_arrow_up
 						button.upDownButtons.angular-material-icons(
+							id="decrementClip"
 							ng-click="vm.decrementDiscrete(0.001)"
 						) keyboard_arrow_down
 
