ISSUE #463 - WIP compare panel

--- a/frontend/components/panel/css/panel.css
+++ b/frontend/components/panel/css/panel.css
@@ -203,3 +203,7 @@ panel-card-option-erase md-icon,
 panel-card-option-pin md-icon {
   color: inherit !important;
 }
+
+.leftButtons {
+  margin-left: 5px;
+}
