--- a/frontend/components/panel/pug/panel.pug
+++ b/frontend/components/panel/pug/panel.pug
@@ -18,7 +18,7 @@ div(ng-show="vm.showPanel")
 
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
 
-	div#buttons(
+	div#buttons.leftButtons(
 		hide-xs
 		hide-sm
 		ng-class="{ active : vm.activate }"
