--- a/frontend/components/compare/css/compare.css
+++ b/frontend/components/compare/css/compare.css
@@ -4,6 +4,8 @@ compare .topBorder {
 
 compare .modelType {
     color: grey;
+    border-right: solid 1px gainsboro;
+    border-left: solid 1px gainsboro;
 }
 
 compare .modelSides {
@@ -14,13 +16,17 @@ compare md-tabs md-tabs-content-wrapper {
     height: 100%;
 }
 
+compare .compareState {
+    margin-left: 30px;
+}
+
 compare md-tab-item {
     width: 50%;
 }
 
 compare .compareButton {
     text-align: center;
-    margin: auto;
+    margin: auto !important;
 }
 
 compare .compareVisibility {
@@ -31,13 +37,22 @@ compare .compareModel:hover {
     background-color: #f0f0f0;
 }
 
-compare .authorDate {
+md-menu-content .authorDate {
     color: #a6a6a6 !important;
+}
+
+compare .modelType {
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
 }
 
 compare .selfDiffWarning {
     text-align: center;
     margin: 40px;
+}
+
+compare .modelTypeSelection {
 }
 
 compare .revisionText {
@@ -50,16 +65,22 @@ compare .modelText {
     margin-bottom: 10px;
 }
 
+compare md-tabs-content-wrapper md-tab-content {
+    margin-bottom: 125px;
+}
+
 compare .topContainer {
     height: 100%;
 }
 
 compare .bottomContainer {
     z-index: 3;
+    position: absolute;
+    bottom: 0;
     background: #fafafa;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-bottom: 15px; 
 }
 
 compare .bottomSlider {
